--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,18 @@
   <meta charset="utf-8">
   <title>Sev</title>
   <base href="/">
+  <style>
+html, body, body ,div,  ol, ul, li, fieldset, form, label, legend, table, header {
+margin: 0;
+padding: 0;
+border: 0;
+background-color: #c2c2a3;
+
+
+
+}
+</style>
+
 
   {{#unless environment.production}}
   <script src="/ember-cli-live-reload.js" type="text/javascript"></script>
@@ -13,7 +25,7 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
-  
+
     {{#each scripts.polyfills}}
     <script src="{{.}}"></script>
     {{/each}}
@@ -22,6 +34,6 @@
         System.import('main');
       }).catch(console.error.bind(console));
     </script>
-  
+
 </body>
 </html>
